--- a/emptydir-example.yaml
+++ b/emptydir-example.yaml
@@ -4,15 +4,14 @@ metadata:
   name: mtdir-pod
 spec:
   containers:
-  - image: alpine
-    imagePullPolicy: IfNotPresent
-    name: myvolumes-container
-    
+  - name: myvolumes-container
+    image: alpine
     command: [    'sh', '-c', 'echo The Bench Container 1 is Running ; sleep 3600']
     
     volumeMounts:
     - mountPath: /demo
       name: demo-volume
-  volumes:
+ 
+ volumes:
   - name: demo-volume
     emptyDir: {}
